--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bingeflix",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/api/",
+  "proxy": "http://[::1]:8080/api",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
@@ -10,8 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
